Update MS endpoint to use https

--- a/src/test/webapp/demo/kcs_sample.html
+++ b/src/test/webapp/demo/kcs_sample.html
@@ -1,14 +1,15 @@
 <html>
   <head>
     <meta name="language" content="en"/>
-    <title>Title</title>
+    <title>Zanata KCS Article Test</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   </head>
   <body class="i18n-fr">
   <div id="cp-content" class="main-content">
     <article class="kcs_solution cirrus-content" id="main-content">
       <div class="content-wrapper">
         <header class="header">
-          <h1 class="title">H1 title</h1>
+          <h1 class="title">English to French KCS test</h1>
           <div class="header-meta">
             <span class="status inprogress" data-content="This solution is in progress.">Solution In Progress</span>
           </div>
