Creating site for 1.0.0-SNAPSHOT

--- a/project-reports.html
+++ b/project-reports.html
@@ -48,7 +48,7 @@
             <strong>Project Reports</strong>
                   <ul>
                       <li class="none">
-                          <a href="jacoco-aggregate/index.html" title="JaCoCo Aggregate">JaCoCo Aggregate</a>
+                          <a href="apidocs/index.html" title="Web Service API">Web Service API</a>
             </li>
               </ul>
         </li>
@@ -72,8 +72,8 @@
 <th>Document</th>
 <th>Description</th></tr>
 <tr class="b">
-<td><a href="jacoco-aggregate/index.html">JaCoCo Aggregate</a></td>
-<td>JaCoCo Aggregate Coverage Report.</td></tr></table></div></div>
+<td><a href="apidocs/index.html">Web Service API</a></td>
+<td>Web Service API Documentation</td></tr></table></div></div>
       </div>
     </div>
     <div class="clear">
