--- a/plugins.html
+++ b/plugins.html
@@ -73,6 +73,9 @@
             </li>
               </ul>
         </li>
+                                                                    <li class="collapsed">
+                          <a href="project-reports.html" title="Project Reports">Project Reports</a>
+                  </li>
           </ul>
                              <a href="http://maven.apache.org/" title="Built by Maven" class="poweredBy">
         <img class="poweredBy" alt="Built by Maven" src="./images/logos/maven-feather.png" />
@@ -156,7 +159,15 @@
 <td>0.7.8</td></tr></table></div>
 <div class="section">
 <h2>Project Report Plugins<a name="Project_Report_Plugins"></a></h2><a name="Project_Report_Plugins"></a>
-<p>There are no plugins reports defined in the Reporting part of this project.</p></div>
+<table border="0" class="bodyTable">
+<tr class="a">
+<th>GroupId</th>
+<th>ArtifactId</th>
+<th>Version</th></tr>
+<tr class="b">
+<td>com.webcohesion.enunciate</td>
+<td><a class="externalLink" href="http://enunciate.webcohesion.com/enunciate-slim-maven-plugin">enunciate-slim-maven-plugin</a></td>
+<td>2.8.0</td></tr></table></div>
       </div>
     </div>
     <div class="clear">
