rename other file and variables

--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Zanata Machine Translations</title>
+  <title>Magpie Machine Translations</title>
   <link rel="shortcut icon"
       href="http://assets-zanata.rhcloud.com/master/favicon.ico"/>
   <link rel="stylesheet"
@@ -12,7 +12,7 @@
 <body>
 <h1>Zanata Machine Translations</h1>
 <div class="container-fluid">
-  <p>This is a Zanata Machine Translations API service.</p>
+  <p>This is a Machine Translations API service.</p>
 </div>
 </body>
 </html>
