--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 <div id="example"></div>
 
 <!-- Dependencies -->
-<script src="./node_modules/react/umd/react.development.js"></script>
-<script src="./node_modules/react-dom/umd/react-dom.development.js"></script>
+<script src="./frontend/node_modules/react/umd/react.development.js"></script>
+<script src="./frontend/node_modules/react-dom/umd/react-dom.development.js"></script>
+
 
 <!-- Main -->
-<script src="./dist/bundle.js"></script>
+<script src="./frontend/dist/bundle.js"></script>
 </body>
 </html>
