rename more names

--- a/server/src/main/webapp/health.html
+++ b/server/src/main/webapp/health.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Zanata Machine Translations</title>
+  <title>Magpie Machine Translations</title>
 </head>
 <body>
   <p>Health check</p>
