--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -10,7 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<h1>Zanata Machine Translations</h1>
+<h1>Magpie Machine Translations</h1>
 <div class="container-fluid">
   <p>This is a Machine Translations API service.</p>
 </div>
