--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8" />
+  <link rel="stylesheet" type="text/css" href="./frontend/dist/main.css" />
   <title>Hello React!</title>
 </head>
 <body>
