--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -1,8 +1,7 @@
 <html>
 <head>
   <title>Magpie Machine Translations</title>
-  <link rel="shortcut icon"
-      href="http://assets-zanata.rhcloud.com/master/favicon.ico"/>
+  <link rel="shortcut icon" href="http://zanata.org/images/logo/logo.ico"/>
   <link rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
       integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
